[code->add] Add assigment questions 2 and 3

--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -234,6 +234,228 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Logistic model with regularization L2\n",
+    "batch_size = 128\n",
+    "l2_constant = .01\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "\n",
+    "  # Input data. For the training data, we use a placeholder that will be fed\n",
+    "  # at run time with a training minibatch.\n",
+    "  tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                    shape=(batch_size, image_size * image_size))\n",
+    "  tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "  tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "  tf_test_dataset = tf.constant(test_dataset)\n",
+    "  \n",
+    "  # Variables.\n",
+    "  weights = tf.Variable(\n",
+    "    tf.truncated_normal([image_size * image_size, num_labels]))\n",
+    "  biases = tf.Variable(tf.zeros([num_labels]))\n",
+    "  \n",
+    "  # Training computation.\n",
+    "  logits = tf.matmul(tf_train_dataset, weights) + biases\n",
+    "  loss = tf.reduce_mean(\n",
+    "    tf.nn.softmax_cross_entropy_with_logits(logits, tf_train_labels))\n",
+    "  \n",
+    "  # Regularization\n",
+    "  # Biases are not regularized\n",
+    "  # http://stats.stackexchange.com/questions/153605/no-regularisation-term-for-bias-unit-in-neural-network\n",
+    "  loss_regularize  = loss + (l2_constant * tf.nn.l2_loss(weights))\n",
+    "\n",
+    "  # Optimizer.\n",
+    "  optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss_regularize)\n",
+    "  \n",
+    "  # Predictions for the training, validation, and test data.\n",
+    "  train_prediction = tf.nn.softmax(logits)\n",
+    "  valid_prediction = tf.nn.softmax(\n",
+    "    tf.matmul(tf_valid_dataset, weights) + biases)\n",
+    "  test_prediction = tf.nn.softmax(tf.matmul(tf_test_dataset, weights) + biases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "num_steps = 100000\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "  tf.initialize_all_variables().run()\n",
+    "  print(\"Initialized\")\n",
+    "  for step in range(num_steps):\n",
+    "    # Pick an offset within the training data, which has been randomized.\n",
+    "    # Note: we could use better randomization across epochs.\n",
+    "    offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "    # Generate a minibatch.\n",
+    "    batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "    batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
+    "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+    "    # and the value is the numpy array to feed to it.\n",
+    "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "    _, l, predictions = session.run(\n",
+    "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "    if (step % 10000 == 0):\n",
+    "      print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "      print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "      print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
+    "        valid_prediction.eval(), valid_labels))\n",
+    "  print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Deep learning model with regularization L2\n",
+    "batch_size = 128\n",
+    "l2_constant = 0.001\n",
+    "hidden_nodes = 1024\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "\n",
+    "with graph.as_default():\n",
+    "\n",
+    "  # Input data. For the training data, we use a placeholder that will be fed\n",
+    "  # at run time with a training minibatch.\n",
+    "  tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                    shape=(batch_size, image_size * image_size))\n",
+    "  tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "  tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "  tf_test_dataset = tf.constant(test_dataset)\n",
+    "  \n",
+    "  # Variables Step1.\n",
+    "  weights = tf.Variable(\n",
+    "    tf.truncated_normal([image_size * image_size, hidden_nodes]))\n",
+    "  biases = tf.Variable(tf.zeros([hidden_nodes]))\n",
+    "  \n",
+    "  # Variables Step 2\n",
+    "  weights_2 = tf.Variable(\n",
+    "    tf.truncated_normal([hidden_nodes, num_labels]))\n",
+    "  biases_2 = tf.Variable(tf.zeros([num_labels]))    \n",
+    "  \n",
+    "  # Training computation.\n",
+    "  # Relu applied  \n",
+    "  logits = tf.nn.relu(tf.matmul(tf_train_dataset, weights) + biases)            \n",
+    "\n",
+    "  logits_2 = (tf.matmul(logits, weights_2) + biases_2) \n",
+    "    \n",
+    "  loss = tf.reduce_mean(\n",
+    "    tf.nn.softmax_cross_entropy_with_logits(logits_2, tf_train_labels))\n",
+    "  \n",
+    "  # Regularization\n",
+    "  loss_regularize  = loss + (l2_constant * (tf.nn.l2_loss(weights_2) + tf.nn.l2_loss(weights)))\n",
+    "    \n",
+    "  # Optimizer.\n",
+    "  optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss_regularize)\n",
+    "  \n",
+    "  # Predictions for the training, validation, and test data.\n",
+    "  train_prediction = tf.nn.softmax(logits_2)\n",
+    "\n",
+    "  logits = tf.nn.relu(tf.matmul(tf_valid_dataset, weights) + biases)            \n",
+    "\n",
+    "  logits_2 = (tf.matmul(logits, weights_2) + biases_2) \n",
+    "\n",
+    "  valid_prediction = tf.nn.softmax(logits_2)\n",
+    "\n",
+    "  logits = tf.nn.relu(tf.matmul(tf_test_dataset, weights) + biases)            \n",
+    "\n",
+    "  logits_2 = (tf.matmul(logits, weights_2) + biases_2) \n",
+    " \n",
+    "  test_prediction = tf.nn.softmax(logits_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 294.611511\n",
+      "Minibatch accuracy: 7.8%\n",
+      "Validation accuracy: 19.6%\n",
+      "Minibatch loss at step 10000: 0.333871\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 89.5%\n",
+      "Minibatch loss at step 20000: 0.392025\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 89.5%\n",
+      "Minibatch loss at step 30000: 0.228185\n",
+      "Minibatch accuracy: 92.2%\n",
+      "Validation accuracy: 89.6%\n",
+      "Minibatch loss at step 40000: 0.328368\n",
+      "Minibatch accuracy: 91.4%\n",
+      "Validation accuracy: 89.2%\n",
+      "Minibatch loss at step 50000: 0.343030\n",
+      "Minibatch accuracy: 88.3%\n",
+      "Validation accuracy: 89.3%\n",
+      "Minibatch loss at step 60000: 0.325169\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 89.7%\n",
+      "Minibatch loss at step 70000: 0.437072\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 89.8%\n",
+      "Minibatch loss at step 80000: 0.263043\n",
+      "Minibatch accuracy: 93.0%\n",
+      "Validation accuracy: 89.7%\n",
+      "Minibatch loss at step 90000: 0.242690\n",
+      "Minibatch accuracy: 93.0%\n",
+      "Validation accuracy: 89.7%\n",
+      "Test accuracy: 94.6%\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_steps = 100000\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "  tf.initialize_all_variables().run()\n",
+    "  print(\"Initialized\")\n",
+    "  for step in range(num_steps):\n",
+    "    # Pick an offset within the training data, which has been randomized.\n",
+    "    # Note: we could use better randomization across epochs.\n",
+    "    offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "    # Generate a minibatch.\n",
+    "    batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "    batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
+    "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+    "    # and the value is the numpy array to feed to it.\n",
+    "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "    _, l, predictions = session.run(\n",
+    "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "    if (step % 10000 == 0):\n",
+    "      print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "      print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "      print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
+    "        valid_prediction.eval(), valid_labels))\n",
+    "  print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -266,6 +488,146 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Deep learning model with regularization L2\n",
+    "batch_size = 128\n",
+    "l2_constant = 0.001\n",
+    "hidden_nodes = 1024\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "\n",
+    "with graph.as_default():\n",
+    "\n",
+    "  # Input data. For the training data, we use a placeholder that will be fed\n",
+    "  # at run time with a training minibatch.\n",
+    "  tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                    shape=(batch_size, image_size * image_size))\n",
+    "  tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "  tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "  tf_test_dataset = tf.constant(test_dataset)\n",
+    "  \n",
+    "  # Variables Step1.\n",
+    "  weights = tf.Variable(\n",
+    "    tf.truncated_normal([image_size * image_size, hidden_nodes]))\n",
+    "  biases = tf.Variable(tf.zeros([hidden_nodes]))\n",
+    "  \n",
+    "  # Variables Step 2\n",
+    "  weights_2 = tf.Variable(\n",
+    "    tf.truncated_normal([hidden_nodes, num_labels]))\n",
+    "  biases_2 = tf.Variable(tf.zeros([num_labels]))    \n",
+    "  \n",
+    "  # Training computation.\n",
+    "  # Relu applied  \n",
+    "  # Dropout applied. Dropout is only applied during trainning.\n",
+    "  logits = tf.nn.dropout(tf.nn.relu(tf.matmul(tf_train_dataset, weights) + biases),.5)\n",
+    "\n",
+    "  logits_2 = (tf.matmul(logits, weights_2) + biases_2) \n",
+    "    \n",
+    "  loss = tf.reduce_mean(\n",
+    "    tf.nn.softmax_cross_entropy_with_logits(logits_2, tf_train_labels))\n",
+    "  \n",
+    "  # Regularization\n",
+    "  loss_regularize  = loss + (l2_constant * (tf.nn.l2_loss(weights_2) + tf.nn.l2_loss(weights)))\n",
+    "    \n",
+    "  # Optimizer.\n",
+    "  optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss_regularize)\n",
+    "  \n",
+    "  # Predictions for the training, validation, and test data.\n",
+    "  train_prediction = tf.nn.softmax(logits_2)\n",
+    "\n",
+    "  logits = tf.nn.relu(tf.matmul(tf_valid_dataset, weights) + biases)            \n",
+    "\n",
+    "  logits_2 = (tf.matmul(logits, weights_2) + biases_2) \n",
+    "\n",
+    "  valid_prediction = tf.nn.softmax(logits_2)\n",
+    "\n",
+    "  logits = tf.nn.relu(tf.matmul(tf_test_dataset, weights) + biases)            \n",
+    "\n",
+    "  logits_2 = (tf.matmul(logits, weights_2) + biases_2) \n",
+    " \n",
+    "  test_prediction = tf.nn.softmax(logits_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 543.877136\n",
+      "Minibatch accuracy: 7.0%\n",
+      "Validation accuracy: 24.3%\n",
+      "Minibatch loss at step 10000: 0.429375\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 88.0%\n",
+      "Minibatch loss at step 20000: 0.484427\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Validation accuracy: 88.3%\n",
+      "Minibatch loss at step 30000: 0.343361\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 88.3%\n",
+      "Minibatch loss at step 40000: 0.377979\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 88.0%\n",
+      "Minibatch loss at step 50000: 0.449778\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 88.6%\n",
+      "Minibatch loss at step 60000: 0.421339\n",
+      "Minibatch accuracy: 85.9%\n",
+      "Validation accuracy: 88.7%\n",
+      "Minibatch loss at step 70000: 0.475640\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Validation accuracy: 88.5%\n",
+      "Minibatch loss at step 80000: 0.323454\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 88.4%\n",
+      "Minibatch loss at step 90000: 0.335562\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 88.3%\n",
+      "Test accuracy: 93.8%\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_steps = 100000\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "  tf.initialize_all_variables().run()\n",
+    "  print(\"Initialized\")\n",
+    "  for step in range(num_steps):\n",
+    "    # Pick an offset within the training data, which has been randomized.\n",
+    "    # Note: we could use better randomization across epochs.\n",
+    "    offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "    # Generate a minibatch.\n",
+    "    batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "    batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
+    "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+    "    # and the value is the numpy array to feed to it.\n",
+    "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "    _, l, predictions = session.run(\n",
+    "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "    if (step % 10000 == 0):\n",
+    "      print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "      print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "      print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
+    "        valid_prediction.eval(), valid_labels))\n",
+    "  print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -288,6 +650,15 @@
     " \n",
     " ---\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
