[code->modify] Modify Assigment 3 Question 3

--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -489,9 +489,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
     "  # Training computation.\n",
     "  # Relu applied  \n",
     "  # Dropout applied. Dropout is only applied during trainning.\n",
-    "  logits = tf.nn.dropout(tf.nn.relu(tf.matmul(tf_train_dataset, weights) + biases),.5)\n",
+    "  logits = tf.nn.relu((tf.matmul(tf_train_dataset, tf.nn.dropout(weights,.6))) + biases)\n",
     "\n",
     "  logits_2 = (tf.matmul(logits, weights_2) + biases_2) \n",
     "    \n",
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -566,37 +566,37 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 543.877136\n",
-      "Minibatch accuracy: 7.0%\n",
-      "Validation accuracy: 24.3%\n",
-      "Minibatch loss at step 10000: 0.429375\n",
-      "Minibatch accuracy: 89.8%\n",
-      "Validation accuracy: 88.0%\n",
-      "Minibatch loss at step 20000: 0.484427\n",
-      "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 88.3%\n",
-      "Minibatch loss at step 30000: 0.343361\n",
-      "Minibatch accuracy: 90.6%\n",
-      "Validation accuracy: 88.3%\n",
-      "Minibatch loss at step 40000: 0.377979\n",
-      "Minibatch accuracy: 89.8%\n",
-      "Validation accuracy: 88.0%\n",
-      "Minibatch loss at step 50000: 0.449778\n",
-      "Minibatch accuracy: 87.5%\n",
-      "Validation accuracy: 88.6%\n",
-      "Minibatch loss at step 60000: 0.421339\n",
-      "Minibatch accuracy: 85.9%\n",
-      "Validation accuracy: 88.7%\n",
-      "Minibatch loss at step 70000: 0.475640\n",
+      "Minibatch loss at step 0: 554.221924\n",
+      "Minibatch accuracy: 20.3%\n",
+      "Validation accuracy: 35.9%\n",
+      "Minibatch loss at step 10000: 0.441365\n",
       "Minibatch accuracy: 85.2%\n",
+      "Validation accuracy: 88.2%\n",
+      "Minibatch loss at step 20000: 0.479278\n",
+      "Minibatch accuracy: 83.6%\n",
       "Validation accuracy: 88.5%\n",
-      "Minibatch loss at step 80000: 0.323454\n",
-      "Minibatch accuracy: 90.6%\n",
-      "Validation accuracy: 88.4%\n",
-      "Minibatch loss at step 90000: 0.335562\n",
+      "Minibatch loss at step 30000: 0.299427\n",
+      "Minibatch accuracy: 91.4%\n",
+      "Validation accuracy: 88.2%\n",
+      "Minibatch loss at step 40000: 0.379615\n",
+      "Minibatch accuracy: 88.3%\n",
+      "Validation accuracy: 88.1%\n",
+      "Minibatch loss at step 50000: 0.383752\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 88.6%\n",
+      "Minibatch loss at step 60000: 0.376124\n",
       "Minibatch accuracy: 89.1%\n",
-      "Validation accuracy: 88.3%\n",
-      "Test accuracy: 93.8%\n"
+      "Validation accuracy: 88.5%\n",
+      "Minibatch loss at step 70000: 0.484105\n",
+      "Minibatch accuracy: 85.9%\n",
+      "Validation accuracy: 88.5%\n",
+      "Minibatch loss at step 80000: 0.317903\n",
+      "Minibatch accuracy: 91.4%\n",
+      "Validation accuracy: 88.6%\n",
+      "Minibatch loss at step 90000: 0.298682\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 88.8%\n",
+      "Test accuracy: 94.0%\n"
      ]
     }
    ],
